@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-06T08:22:23Z",
+  "timestamp" : "2023-09-07T01:16:12Z",
   "count_outdated" : 486,
   "uniques_outdated" : 229,
-  "count" : 503,
+  "count" : 504,
   "uniques" : 239,
   "clones" : [
     {
@@ -88,9 +88,9 @@
     },
     {
       "timestamp": "2023-09-06T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
