@@ -1,3 +1,12 @@
+2023-09-07T01:16:12Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6104203451 # 767
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-07
+* notice: last 14d: unq all: 1 18
+* notice: prev accum: outdated-unq outdated-all / unq all: 229 486 / 239 503
+* notice: next accum: outdated-unq outdated-all / unq all: 229 486 / 239 504
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2023-09-06]
+
 2023-09-06T08:22:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6094571107 # 765
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-06
